<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QoE Test</string>

    <string-array name="nav_drawer_items">
        <item>Test</item>
        <item>Información del Teléfono</item>
        <item>Acerca de</item>
    </string-array>
    <string-array name="sexo">
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>
    <string-array name="prefesion">
        <item>Estudiante</item>
        <item>Funcionario</item>
        <item>Docente</item>
    </string-array>
    <string-array name="frecuencia">
        <item>Frecuentemente</item>
        <item>Ocasionalmente</item>
        <item>Nunca</item>
    </string-array>
    <string-array name="costo">
        <item>Si</item>
        <item>No</item>
    </string-array>
    <string-array name="costoMas">
        <item>Si</item>
        <item>No</item>
        <item>Tal vez</item>
    </string-array>
    <string-array name="apps">
        <item>Redes Sociales (Facebook...)</item>
        <item>Mensajería Instantánea (Whatsapp...)</item>
        <item>Video Streaming (Youtube...)</item>
        <item>Navegador Web</item>
    </string-array>

    <array name="nav_drawer_icons">
        <item>@drawable/ic_action_view_as_list</item>
        <item>@drawable/ic_action_phone</item>
        <item>@drawable/ic_action_about</item>
    </array>

    <string name="eval_btn_label">EVALUAR</string>
    <string name="comezar_test_btn_label">COMENZAR TEST</string>
    <string name="device_info_title">Dispostivo</string>
    <string name="network_info_title">Red</string>
    <string name="batery_info_title">Estado de batería</string>
    <string name="net_available_info_title">Redes disponibles</string>
    <string name="active_net_info_title">Redes activas</string>
    <string name="start_label">Comenzar Test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="action_cancel">Cancelar</string>
    <string name="test_text_fragment">Bienvenido al test de
        evaluación de calidad de la experiencia en el uso de redes</string>
    <string name="title_activity_pre_test_activty">Perfil de Usuario</string>

    <!-- Pre test -->
    <string name="datos_header_label">Datos</string>
    <string name="frecuencia_header_label">Datos de utilización</string>
    <string name="costo_header_label">Costo</string>
    <string name="sexo_label">Sexo:</string>
    <string name="frecuencia_pregunta_text">¿Con que frecuencia utiliza
        internet con paquete de datos móviles?</string>
    <string name="frecuencia_pregunta_app_text">¿Qué aplicaciones utilizas con frecuencia?</string>
    <string name="edad_label">Edad:</string>
    <string name="profesion_label">Profesión:</string>
    <string name="costo_pregunta_label">¿Está conforme con costo Gs. por cantidad de datos que le ofrece su operador de telefonía?</string>
    <string name="costo_pregunta2_label">¿Estaría dispuesto a pagar más por un mejor servicio de datos?</string>

    <!-- Botones Atras y Siguiente -->
    <string name="atras_btn_label">ATRAS</string>
    <string name="sig_btn_label">SIGUIENTE</string>
    <string name="title_activity_web_test_into">Test Web</string>
    <string name="hello_world">Hello world!</string>

    <!-- Web Test -->
    <string name="web_test_label">Test 1: Navegación Web</string>
    <string name="web_test_text">Este test pretende evaluar la calidad
        de la experiencia de la redes celulares durante su uso en la
        navegación web</string>

    <string name="web_test_explanation">En este test deberá evaluar la calidad del contenido desplagado
    en la pantalla, como así también que tan rápido se muestra el contenido. Para ello, observe
    cuidadosamente las animaciones desplegadas.</string>

    <string name="web_test_explanation_final">Al finalizar la observación, evalúe de acuerdo al
        criterio indicado con respecto a esta escala de puntuación. Al seleccionar uno de ellos
    aparecerá una descripción indicando el significado de la puntuación.</string>

    <string name="excelente_label">Excelente</string>
    <string name="muy_bueno_label">Muy Bueno</string>
    <string name="bueno_label">Bueno</string>
    <string name="pobre_label">Pobre</string>
    <string name="malo_label">Malo</string>

    <string name="title_activity_web_test">Test WEB</string>
    <string name="title_activity_web_test_dos">Test Web 2/2</string>
    <string name="title_activity_qo_eweb_test">Evaluación de la calidad</string>

    <!-- QoE Web Test -->
    <string name="header_qoe_test">Evaluación</string>
    <string name="pregunta_tiempo_carga">¿Qué tal fue la velocidad de carga
    de la página web?</string>
    <string name="pregunta_calidad_contenido">La calidad de visualización del
         contenido web fue: </string>
    <string name="title_activity_streaming_test_intro">Test de video streaming</string>

    <!-- Emotion Test -->
    <string name="emotion_text">Pre-Test</string>
    <string name="emocion_label">¿Cuál es su estado de ánimo actual?</string>

    <!-- Streaming Test -->
    <string name="streaming_test_label">Test 2: Multimedia Streaming</string>
    <string name="streaming_test_text">Este test pretende evaluar la calidad
        de la experiencia de las redes celulares durante su uso en la
        transmisión multimedia a través de internet</string>
    <string name="title_activity_streaming_test">Streaming Test</string>
    <string name="title_activity_qo_estreaming_test">"Evaluación "</string>
    <string name="detener_test_streaming_title">Detener Reproducción</string>
    <string name="detener_test_streaming_msg">Ha tardado mucho la reproducción del vídeo, desea continuar con el siguiente test?</string>
    <string name="afirmative_response">Aceptar</string>
    <string name="negative_response">Cancelar</string>

    <string name="streaming_test_explanation">En este test deberá evaluar la calidad del contenido desplagado
    en la pantalla, el retardo en reproducirse el video y observar la cantidad de pausas durante la reproducción</string>

    <!-- QoE Streaming Test -->
    <string name="pregunta_tiempo_carga_video">El tiempo de carga inicial del video le pareció:</string>
    <string name="pregunta_buffering_video">Evalué el tiempo/cantidad de veces que la reproducción del video se pausó:</string>
    <string name="pregunta_global_video">De manera global ¿Qué
        puntuación le daría a la reproducción de video?</string>
    <string name="pregunta_calidad_video">Evalúe la calidad de imagen/audio
    de la reproducción</string>
    <string name="title_activity_music_straming_test_intro">Music Streaming Test</string>

    <!-- Music Streaming Test -->


    <!-- Test Finalizado -->
    <string name="title_activity_enviar_test">Test Finalizado</string>
    <string name="evalucion_finalizada">Evaluación Finalizada</string>
    <string name="gracias">Gracias por su colaboración!</string>
    <string name="enviar_resultados_test">Enviar Resultados</string>
    <string name="title_activity_emocion_test">Pre-Test</string>
    <string name="title_activity_streaming_test_dos">Streaming Test 2/2</string>
    <string name="title_activity_qo_estreaming_test_dos">Evaluación</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enviar_resultados_label">ENVIAR RESULTADOS</string>

</resources>
