<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="2"
    tools:context="py.fpuna.tesis.qoetest.fragment.StartStreamingTestFragment">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">

            <android.support.v7.internal.widget.CompatTextView
                style="@style/HeaderTextStyle"
                android:id="@+id/header_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/streaming_test_label"
                android:gravity="top"
                android:background="@color/colorAccentDefault"
                android:padding="50dp"/>


            <TextView
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/web_test_explanation_final"
                android:id="@+id/view"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:layout_below="@id/header_text"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/excelente_text"
                android:layout_width="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:layout_height="wrap_content"
                android:text="@string/excelente_label"
                android:layout_below="@+id/view"/>

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ratingBarExcelente"
                android:numStars="5"
                android:isIndicator="true"
                android:rating="5"
                android:layout_below="@id/excelente_text"/>

            <TextView
                android:id="@+id/muy_bueno_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:text="@string/muy_bueno_label"
                android:layout_below="@+id/ratingBarExcelente"/>

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ratingBarMuyBueno"
                android:numStars="4"
                android:isIndicator="true"
                android:rating="4"
                android:layout_below="@id/muy_bueno_text"/>

            <TextView
                android:id="@+id/bueno_text"
                android:layout_width="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:layout_height="wrap_content"
                android:text="@string/bueno_label"
                android:layout_below="@+id/ratingBarMuyBueno"/>

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ratingBarBueno"
                android:numStars="3"
                android:isIndicator="true"
                android:rating="3"
                android:layout_below="@id/bueno_text"/>

            <TextView
                android:id="@+id/pobre_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:text="@string/pobre_label"
                android:layout_below="@+id/ratingBarBueno"/>

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ratingBarPobre"
                android:numStars="2"
                android:isIndicator="true"
                android:rating="2"
                android:layout_below="@id/pobre_text"/>

            <TextView
                android:id="@+id/malo_text"
                android:layout_width="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:layout_height="wrap_content"
                android:text="@string/malo_label"
                android:layout_below="@+id/ratingBarPobre"/>

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ratingBarMalo"
                android:numStars="1"
                android:isIndicator="true"
                android:rating="1"
                android:layout_below="@id/malo_text"/>
        </RelativeLayout>

    </ScrollView>

</LinearLayout>
